mycollab-web/src/main/resources/VAADIN/themes/mycollab/styles.css
/* ... */
.v-buttongroup .v-button.graybtn.v-button-left,.v-buttongroup .v-button.graybtn.v-button-middle,.v-buttongroup .v-button.graybtn.v-button-right
	{
	background-color: rgb(169, 169, 169);
	border-color: rgb(56, 56, 56);
	color: #FFFFFF;
	text-shadow: 1px 1px 0px #1570cd;
	padding: 3px 13px;
}

.v-buttongroup .v-button.graybtn2.v-button-left,.v-buttongroup .v-button.graybtn2.v-button-middle,.v-buttongroup .v-button.graybtn2.v-button-right
	{
	background-color: rgb(169, 169, 169);
	border-color: rgb(56, 56, 56);
	color: #FFFFFF;
	border-top: none;
	border-bottom: none;
	border-bottom-left-radius: 0px;
	border-top-left-radius: 0px;
	text-shadow: 1px 1px 0px #1570cd;
	padding: 3px 13px;
	text-shadow: 1px 1px 0px #1570cd;
	text-shadow: 1px 1px 0px #1570cd;
}

.v-buttongroup .v-button.v-button-left:active,.v-buttongroup .v-button.v-button-middle:active,.v-buttongroup .v-button.v-button-right:active,.v-buttongroup .v-button.v-button-left:focus,.v-buttongroup .v-button.v-button-middle:focus,.v-buttongroup .v-button.v-button-right:focus
	{
	background: none no-repeat 0 0 rgb(161, 161, 161);
	border-color: rgb(171, 171, 171);
}
/* End Button Group */

/* Multifiles Upload */
.v-multifileupload-uploads .v-upload .v-button {
	border: none;
	background: url("icons/16/attachment.png") no-repeat center left
		transparent;
	padding-left: 20px;
	color: rgb(69, 69, 69);
}

.v-multifileupload-uploads .v-upload .v-button>.v-button-wrap {
	background: none;
}

.v-multifileupload-uploads .v-upload-immediate input {
	cursor: pointer;
}
/* End Multifiles Upload */

/* xBreadCrumb */
.xbreadcrumbs {
	background-color: transparent !important;
}

.xbreadcrumbs li {
	padding-bottom: 8px !important;
}

.xbreadcrumbs li>div.xbreadcrumbbutton {
	margin-top: 3px;
}

.xbreadcrumbs li>div.xbreadcrumbbutton.v-button-xbreadcrumbbutton-home {
	margin: 0px;
}

.xbreadcrumbs li>div.xbreadcrumbbutton {
	margin-top: 3px;
}

.xbreadcrumbs li>div.xbreadcrumbbutton.v-button-xbreadcrumbbutton-home {
	margin: 0px;
}

.xbreadcrumbs .v-link a span,.xbreadcrumbbutton .v-button-caption {
	font-size: 13px !important;
}

.v-button-xbreadcrumbbutton-home .v-button-caption {
	background-position: center center !important;
}
div.v-button-link.xbreadcrumbbutton .v-button-wrap {
	padding: 0px;
}
/* End xBreadCrumb */

/* Error Message */
.v-form-errormessage .gwt-HTML {
	text-align: center;
	color: red;
}
/* End Error Message */

/* Task List Component */
.taskdisplay-component>.v-csslayout-margin>.v-csslayout-container>div.v-button
	{
	margin-top: 10px;
}

.task-component {
	margin-bottom: 5px;
	background-color: #F7F7F7;
}

.task-component>.v-csslayout-margin {
	border: 1px solid rgba(0, 0, 0, 0.25);
	padding-left: 5px;
}

.task-component .task-name {
	font-weight: bold;
}

.task-component .created-time {
	color: gray;
	font-size: 11px;
}
/* End Task List Component */

/* Widget */
.widget-row .metadata {
	font-size: 12px;
	color: gray;
}
/* End Widget */

/* Bug Widget */
.widget-title {
	border-bottom: 1px solid rgb(183, 183, 183);
	padding-bottom: 0.2em;
	margin-bottom: 5px;
	font-weight: bold
}

.widget-row {
	background-color: rgb(247, 247, 247);
	border-width: 0px 1px 1px 1px;
	border-style: solid;
	border-color: rgb(169, 169, 169);
	padding: 3px 5px 0px;
}

.widget-row.odd {
	background-color: rgb(212, 223, 239);
}
/* End Bug Widget */

/* Background has SELECT icon */
.v-button.select-bg {
	height: 24px;
	width: 22px;
	background: url('icons/16/select.png') no-repeat center center
		transparent;
	border-radius: 0px 2px 2px 0px;
}

.v-button.select-bg .v-button-wrap,.v-button.select-bg:active .v-button-wrap
	{
	padding: 0px;
	margin: 0px;
	border-width: 0px;
}
/* End Background has SELECT icon */

/* Popup Window */
.v-window,.v-Notification {
	background-color: white;
	border-radius: 2px;
}

.v-window-outerheader {
	background: url('icons/grad-light-top.png') repeat-x left top
		rgb(228, 228, 228);
	border-bottom: 1px solid rgb(169, 169, 169);
	border-radius: 1px;
	min-height: 23px;
}

div.v-window-header {
	font-weight: bold;
	color: #444;
	text-shadow: none;
	padding: 3px 0px 0px;
	text-align: left;
}

.v-window .v-table-header-wrap {
	background: url('icons/grad-light-top.png') repeat-x left top #ddd;
}

.v-window .v-table-header-wrap .v-table-caption-container {
	color: black;
	text-shadow: 0px 1px 0px rgb(223, 223, 223);
}
/* End Popup Window */

/* Rating Stars */
.v-table-row-odd .v-ratingstars-wrapper-tiny .v-ratingstars-star {
	background-image: url("icons/star_12x11.png");
}
/* End Rating Stars */

/* No border Panel */
.v-label-h2.no-border {
	border: none;
}

.v-panel.no-border .v-panel-nocaption {
	border-top: none;
}

.v-panel.no-border .v-panel-deco {
	border-top: none;
}

.v-panel.no-border div.v-panel-content-light {
	border: none;
}

.v-panel.no-border .v-panel-content {
	border: none;
}
/* End no border Panel */

/* Form Container View Field */
.form-container .v-csslayout .v-button-link {
	height: 18px;
	border-radius: 8px 8px 8px 8px;
	background: url("icons/grad-dark-bottom.png") repeat-x scroll left
		bottom rgb(57, 71, 84);
	padding: 0px 7px 1px;
}

.form-container .v-csslayout .v-button-link .v-button-caption {
	color: white;
}
/* End Form Container View Field */

/* LazyLoad */
div.v-lazyloadingwrapper-loading {
	background-color: transparent;
	background-image: url('icons/loading-indicator2.gif');
	border: none;
}
/* End LazyLoad */

/* Mail Panel */
.mail-panel .v-gridlayout-margin {
	max-height: 150px;
	overflow-y: auto;
}
/* End Mail Panel */

/* Progress Indicator */
.v-progressbar-wrapper {
	height: 18px;
	background: none no-repeat 0 0 rgb(245, 245, 245);
	border: 1px solid rgb(161, 161, 161);
}

.v-progressbar-indicator {
	height: 18px;
	border-radius: 2px;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	background: url(img/grad-light-top.png) repeat-x 0 0 rgb(169, 193, 229);
	margin: -1px;
	border: 1px solid rgb(45, 107, 165);
}
/* ... */

